Change 'Get Provider URL' to'Get URL' for brevity

--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -989,7 +989,7 @@
              </font>
             </property>
             <property name="text">
-             <string>Get provider URL</string>
+             <string>Get URL</string>
             </property>
            </widget>
           </item>
