--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -63,6 +63,9 @@
      <string>Processing</string>
     </attribute>
     <widget class="QTableWidget" name="processingsTable">
+     <property name="autoScroll">
+      <bool>false</bool>
+    </property>
      <property name="geometry">
       <rect>
        <x>12</x>
