--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -65,7 +65,7 @@
     <widget class="QTableWidget" name="processingsTable">
      <property name="autoScroll">
       <bool>false</bool>
-    </property>
+     </property>
      <property name="geometry">
       <rect>
        <x>12</x>
@@ -288,7 +288,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Use image extent as AOI</string>
+          <string>Use image extent</string>
          </property>
         </widget>
        </item>
@@ -371,7 +371,7 @@
          </item>
          <item>
           <property name="text">
-           <string>Custom (in settings)</string>
+           <string>Custom URL (in settings)</string>
           </property>
          </item>
         </widget>
@@ -567,7 +567,7 @@
        <rect>
         <x>10</x>
         <y>0</y>
-        <width>571</width>
+        <width>561</width>
         <height>33</height>
        </rect>
       </property>
@@ -599,7 +599,14 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLineEdit" name="outputDirectory"/>
+        <widget class="QLineEdit" name="outputDirectory">
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>21</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="selectOutputDirectory">
@@ -829,13 +836,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>180</y>
         <width>571</width>
-        <height>41</height>
+        <height>31</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -871,7 +878,7 @@
           </font>
          </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://docs.mapflow.ai/docs_api/qgis_mapflow.html#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect?&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&amp;nbsp;&amp;nbsp;&lt;a href=&quot;https://www.maxar.com/legal/securewatch-license&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Terms of Service&lt;/span&gt;&lt;/a&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://docs.mapflow.ai/docs_api/qgis_mapflow.html#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect?&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;a href=&quot;https://www.maxar.com/legal/securewatch-license&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Terms of Service&lt;/span&gt;&lt;/a&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="textFormat">
           <enum>Qt::AutoText</enum>
@@ -936,27 +943,14 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>2</y>
+         <y>-4</y>
          <width>521</width>
-         <height>117</height>
+         <height>111</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_6">
         <item row="0" column="0" colspan="3">
          <layout class="QGridLayout" name="gridLayout_4">
-          <item row="0" column="1">
-           <widget class="QLineEdit" name="maxarConnectID">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>21</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="0">
            <widget class="QLabel" name="labelMaxarFeatureID">
             <property name="font">
@@ -970,7 +964,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="1" column="2">
            <widget class="QLineEdit" name="maxarFeatureID">
             <property name="minimumSize">
              <size>
@@ -983,7 +977,7 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="2" rowspan="2">
+          <item row="0" column="3" rowspan="2">
            <widget class="QPushButton" name="getMaxarURL">
             <property name="font">
              <font>
@@ -1009,6 +1003,45 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="2">
+           <widget class="QLineEdit" name="maxarConnectID">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>21</height>
+             </size>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="1" column="1">
+           <spacer name="verticalSpacer_4">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
          </layout>
         </item>
         <item row="1" column="0">
@@ -1025,7 +1058,14 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QgsMapLayerComboBox" name="maxarAOICombo"/>
+         <widget class="QgsMapLayerComboBox" name="maxarAOICombo">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>21</height>
+           </size>
+          </property>
+         </widget>
         </item>
         <item row="1" column="2">
          <widget class="QPushButton" name="getImageMetadata">
