--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -520,7 +520,7 @@
        </font>
       </property>
       <property name="visible">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true"/>
@@ -949,7 +949,7 @@
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_6">
-        <item row="0" column="0" colspan="3">
+        <item row="0" column="0" colspan="4">
          <layout class="QGridLayout" name="gridLayout_4">
           <item row="1" column="0">
            <widget class="QLabel" name="labelMaxarFeatureID">
@@ -1046,6 +1046,12 @@
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="labelMaxarAOI">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="font">
            <font>
             <pointsize>12</pointsize>
@@ -1061,13 +1067,13 @@
          <widget class="QgsMapLayerComboBox" name="maxarAOICombo">
           <property name="minimumSize">
            <size>
-            <width>0</width>
+            <width>200</width>
             <height>21</height>
            </size>
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
+        <item row="1" column="3">
          <widget class="QPushButton" name="getImageMetadata">
           <property name="font">
            <font>
@@ -1079,6 +1085,19 @@
            <string>Get image metadata</string>
           </property>
          </widget>
+        </item>
+        <item row="1" column="2">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
@@ -1137,8 +1156,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>579</width>
-          <height>516</height>
+          <width>98</width>
+          <height>28</height>
          </rect>
         </property>
         <widget class="QLabel" name="text">
