--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -249,7 +249,7 @@
           </font>
          </property>
          <property name="text">
-          <string>AOI layer:</string>
+          <string>Area of processing:</string>
          </property>
         </widget>
        </item>
@@ -261,7 +261,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Model:</string>
+          <string>Mapflow model:</string>
          </property>
         </widget>
        </item>
@@ -1156,8 +1156,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>98</width>
-          <height>28</height>
+          <width>579</width>
+          <height>516</height>
          </rect>
         </property>
         <widget class="QLabel" name="text">
