improvement: use QGIS auth for custom provider
QGIS authentication system is based on an SQLite DB stored in the QGIS user profile directory.
User creates an authentication config, i.e. an entity that includes the credentials along with the authentication method.
It is essentially an entry in the database. The login & password themselves are stored encrypted.
To retireve and/or decrypt the credentials, a master password is required. This is a password the user creates beforehand.

In the UI, the auth system is represented by a widget that allows selecting an existing auth config, or creating a new one.

It's worth noting that there's another auth widget used across QGIS that actually allows circumventing this system
by simply saving the credentials unencrypted in the project file, or not saving them at all.
But this widget appears to be unavailable for plugin creation (not part of the relevant .so library).
So, unlike various other core parts, will enforce using QGIS Auth DB.
But I believe that its benefits outweight the possible overhead for the user.

For more details, see:
https://docs.qgis.org/3.16/en/docs/pyqgis_developer_cookbook/authentication.html

--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -125,11 +125,11 @@
      <attribute name="horizontalHeaderCascadingSectionResizes">
       <bool>false</bool>
      </attribute>
-     <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>116</number>
-     </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
       <number>67</number>
+     </attribute>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>116</number>
      </attribute>
      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
       <bool>true</bool>
@@ -678,6 +678,25 @@
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
+       <item row="2" column="2">
+        <widget class="QCheckBox" name="zoomLimit">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+           <kerning>true</kerning>
+          </font>
+         </property>
+         <property name="text">
+          <string>Max zoom 14</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="labelCustomProviderURL">
          <property name="font">
@@ -691,25 +710,8 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" colspan="2">
-        <widget class="QLabel" name="labelCustomProviderType">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-           <kerning>true</kerning>
-          </font>
-         </property>
-         <property name="text">
-          <string>Source type:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLineEdit" name="customProviderURL">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
+       <item row="2" column="0" colspan="2">
+        <widget class="QgsAuthConfigSelect" name="customProviderAuth"/>
        </item>
        <item row="1" column="1">
         <widget class="QComboBox" name="customProviderType">
@@ -746,11 +748,8 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="2">
-        <widget class="QCheckBox" name="zoomLimit">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
+       <item row="0" column="1" colspan="2">
+        <widget class="QLabel" name="labelCustomProviderType">
          <property name="font">
           <font>
            <pointsize>12</pointsize>
@@ -758,112 +757,14 @@
           </font>
          </property>
          <property name="text">
-          <string>Max zoom 14</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
+          <string>Source type:</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="layoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>110</y>
-        <width>446</width>
-        <height>62</height>
-       </rect>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_5">
-       <item row="2" column="1">
-        <widget class="QgsPasswordLineEdit" name="customProviderPassword">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>180</width>
-           <height>21</height>
-          </size>
-         </property>
+       <item row="1" column="0">
+        <widget class="QLineEdit" name="customProviderURL">
          <property name="text">
           <string/>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="labelCustomProviderPassword">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-           <kerning>true</kerning>
-          </font>
-         </property>
-         <property name="text">
-          <string>Password:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="labelCustomProviderLogin">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-           <kerning>true</kerning>
-          </font>
-         </property>
-         <property name="text">
-          <string>Login:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" rowspan="2">
-        <widget class="QLineEdit" name="customProviderLogin">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>180</width>
-           <height>21</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2" rowspan="2">
-        <widget class="QCheckBox" name="customProviderSaveAuth">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-           <kerning>true</kerning>
-          </font>
-         </property>
-         <property name="text">
-          <string>Save Login/Password</string>
          </property>
         </widget>
        </item>
@@ -1252,14 +1153,14 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>QgsAuthConfigSelect</class>
+   <extends>QWidget</extends>
+   <header>qgsauthconfigselect.h</header>
+  </customwidget>
+  <customwidget>
    <class>QgsMapLayerComboBox</class>
    <extends>QComboBox</extends>
    <header>qgsmaplayercombobox.h</header>
-  </customwidget>
-  <customwidget>
-   <class>QgsPasswordLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>qgspasswordlineedit.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -1268,10 +1169,6 @@
   <tabstop>customProviderURL</tabstop>
   <tabstop>customProviderType</tabstop>
   <tabstop>preview</tabstop>
-  <tabstop>zoomLimit</tabstop>
-  <tabstop>customProviderLogin</tabstop>
-  <tabstop>customProviderPassword</tabstop>
-  <tabstop>customProviderSaveAuth</tabstop>
   <tabstop>checkMaxar</tabstop>
   <tabstop>maxarConnectID</tabstop>
   <tabstop>getMaxarURL</tabstop>
