--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -1075,6 +1075,9 @@
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
@@ -1087,9 +1090,12 @@
       <property name="cornerButtonEnabled">
        <bool>false</bool>
       </property>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
       <column>
        <property name="text">
-        <string>featureId</string>
+        <string>ID</string>
        </property>
        <property name="textAlignment">
         <set>AlignCenter</set>
@@ -1097,7 +1103,7 @@
       </column>
       <column>
        <property name="text">
-        <string>sourceUnit</string>
+        <string>Source Unit</string>
        </property>
        <property name="textAlignment">
         <set>AlignCenter</set>
@@ -1105,7 +1111,7 @@
       </column>
       <column>
        <property name="text">
-        <string>productType</string>
+        <string>Product Type</string>
        </property>
        <property name="textAlignment">
         <set>AlignCenter</set>
@@ -1113,7 +1119,7 @@
       </column>
       <column>
        <property name="text">
-        <string>colorBandOrder</string>
+        <string>Band Order</string>
        </property>
        <property name="textAlignment">
         <set>AlignCenter</set>
@@ -1121,7 +1127,15 @@
       </column>
       <column>
        <property name="text">
-        <string>formattedDate</string>
+        <string>Cloud Cover</string>
+       </property>
+       <property name="textAlignment">
+        <set>AlignCenter</set>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Date</string>
        </property>
        <property name="textAlignment">
         <set>AlignCenter</set>
