--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -125,11 +125,11 @@
      <attribute name="horizontalHeaderCascadingSectionResizes">
       <bool>false</bool>
      </attribute>
-     <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>116</number>
-     </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
       <number>67</number>
+     </attribute>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>116</number>
      </attribute>
      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
       <bool>true</bool>
@@ -349,33 +349,6 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="polygonCombo">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>150</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>150</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="2">
         <widget class="QLabel" name="labelImagerySource">
          <property name="font">
@@ -388,49 +361,21 @@
          </property>
         </widget>
        </item>
+       <item row="1" column="1">
+        <widget class="QgsMapLayerComboBox" name="polygonCombo">
+         <property name="allowEmptyLayer">
+          <bool>false</bool>
+          </property>
+         <property name="showCrs">
+          <bool>true</bool>
+          </property>
+        </widget>
+         </item>
        <item row="1" column="3">
-        <widget class="QComboBox" name="rasterCombo">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>160</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>160</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
-         <property name="toolTip">
-          <string notr="true"/>
-         </property>
-         <item>
-          <property name="text">
-           <string>Mapbox Satellite</string>
+        <widget class="QgsMapLayerComboBox" name="rasterCombo">
+         <property name="showCrs">
+          <bool>true</bool>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Open new .tif</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Custom URL (in settings)</string>
-          </property>
-         </item>
         </widget>
        </item>
       </layout>
@@ -473,6 +418,19 @@
         </widget>
        </item>
       </layout>
+     </widget>
+     <widget class="QPushButton" name="selectTif">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>120</y>
+        <width>106</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>...</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="processingsController" native="true">
@@ -997,7 +955,26 @@
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_6">
-        <item row="0" column="0" colspan="4">
+        <item row="4" column="0">
+         <widget class="QLabel" name="labelMaxarAOI">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>12</pointsize>
+            <kerning>true</kerning>
+           </font>
+          </property>
+          <property name="text">
+           <string>Area of processing:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="3">
          <layout class="QGridLayout" name="gridLayout_4">
           <item row="1" column="0">
            <widget class="QLabel" name="labelMaxarFeatureID">
@@ -1092,36 +1069,7 @@
           </item>
          </layout>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="labelMaxarAOI">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>12</pointsize>
-            <kerning>true</kerning>
-           </font>
-          </property>
-          <property name="text">
-           <string>Area of processing:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QgsMapLayerComboBox" name="maxarAOICombo">
-          <property name="minimumSize">
-           <size>
-            <width>200</width>
-            <height>21</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="3">
+        <item row="4" column="2">
          <widget class="QPushButton" name="getImageMetadata">
           <property name="font">
            <font>
@@ -1134,18 +1082,15 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+        <item row="4" column="1">
+         <widget class="QgsMapLayerComboBox" name="maxarAOICombo">
+          <property name="allowEmptyLayer">
+           <bool>false</bool>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
+          <property name="showCrs">
+           <bool>true</bool>
           </property>
-         </spacer>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -1323,7 +1268,6 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>rasterCombo</tabstop>
   <tabstop>processingsTable</tabstop>
   <tabstop>customProviderURL</tabstop>
   <tabstop>customProviderType</tabstop>
@@ -1335,7 +1279,6 @@
   <tabstop>checkMaxar</tabstop>
   <tabstop>maxarConnectID</tabstop>
   <tabstop>getMaxarURL</tabstop>
-  <tabstop>maxarAOICombo</tabstop>
   <tabstop>getImageMetadata</tabstop>
  </tabstops>
  <resources/>
