--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -125,11 +125,11 @@
      <attribute name="horizontalHeaderCascadingSectionResizes">
       <bool>false</bool>
      </attribute>
-     <attribute name="horizontalHeaderMinimumSectionSize">
-      <number>67</number>
-     </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>116</number>
+     </attribute>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>67</number>
      </attribute>
      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
       <bool>true</bool>
@@ -262,6 +262,40 @@
        <property name="rightMargin">
         <number>90</number>
        </property>
+       <item row="1" column="2">
+        <widget class="QLabel" name="labelImagerySource">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Imagery source:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="labelAOILayer">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Area:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QgsMapLayerComboBox" name="polygonCombo">
+         <property name="allowEmptyLayer" stdset="0">
+          <bool>false</bool>
+         </property>
+         <property name="showCrs" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="labelProcessingName">
          <property name="font">
@@ -271,6 +305,27 @@
          </property>
          <property name="text">
           <string>Processing name:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QComboBox" name="workflowDefinitionCombo">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>160</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
          </property>
         </widget>
        </item>
@@ -316,67 +371,65 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
-        <widget class="QComboBox" name="workflowDefinitionCombo">
+       <item row="1" column="3">
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <widget class="QgsMapLayerComboBox" name="rasterCombo">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
-           <width>160</width>
+             <width>0</width>
            <height>0</height>
           </size>
          </property>
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
+           <property name="showCrs" stdset="0">
+            <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="labelAOILayer">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <item>
+            <widget class="QPushButton" name="selectTif">
+             <property name="enabled">
+              <bool>true</bool>
+         </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+         </property>
+             <property name="maximumSize">
+              <size>
+               <width>25</width>
+               <height>31</height>
+              </size>
+             </property>
          <property name="font">
           <font>
-           <pointsize>12</pointsize>
+               <pointsize>8</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>Area:</string>
+              <string>...</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>16</width>
+               <height>16</height>
+              </size>
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
-        <widget class="QLabel" name="labelImagerySource">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Imagery source:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QgsMapLayerComboBox" name="polygonCombo">
-         <property name="allowEmptyLayer">
-          <bool>false</bool>
-          </property>
-         <property name="showCrs">
-          <bool>true</bool>
-          </property>
-        </widget>
+          </layout>
          </item>
-       <item row="1" column="3">
-        <widget class="QgsMapLayerComboBox" name="rasterCombo">
-         <property name="showCrs">
-          <bool>true</bool>
-          </property>
-        </widget>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -418,19 +471,6 @@
         </widget>
        </item>
       </layout>
-     </widget>
-     <widget class="QPushButton" name="selectTif">
-      <property name="geometry">
-       <rect>
-        <x>460</x>
-        <y>120</y>
-        <width>106</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>...</string>
-      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="processingsController" native="true">
@@ -1089,10 +1129,10 @@
         </item>
         <item row="4" column="1">
          <widget class="QgsMapLayerComboBox" name="maxarAOICombo">
-          <property name="allowEmptyLayer">
+          <property name="allowEmptyLayer" stdset="0">
            <bool>false</bool>
           </property>
-          <property name="showCrs">
+          <property name="showCrs" stdset="0">
            <bool>true</bool>
           </property>
          </widget>
