--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -233,6 +233,9 @@
       <property name="text">
        <string>Start processing</string>
       </property>
+      <property name="default">
+       <bool>true</bool>
+      </property>
      </widget>
      <widget class="QLabel" name="labelAOIArea">
       <property name="geometry">
@@ -419,6 +422,9 @@
                <pointsize>8</pointsize>
           </font>
          </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
+             </property>
          <property name="text">
               <string>...</string>
              </property>
