--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/plugins/energy_geoalert" >
+    <qresource prefix="/plugins/mapflow" >
         <file>icon.svg</file>
     </qresource>
 </RCC>
