--- a/main_dialog.ui
+++ b/main_dialog.ui
@@ -128,11 +128,11 @@
      <attribute name="horizontalHeaderCascadingSectionResizes">
       <bool>false</bool>
      </attribute>
-     <attribute name="horizontalHeaderMinimumSectionSize">
-      <number>67</number>
-     </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>116</number>
+     </attribute>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>67</number>
      </attribute>
      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
       <bool>true</bool>
@@ -255,53 +255,16 @@
        <string/>
       </property>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="">
       <property name="geometry">
        <rect>
         <x>3</x>
         <y>11</y>
-        <width>664</width>
-        <height>62</height>
+        <width>571</width>
+        <height>91</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <property name="rightMargin">
-        <number>90</number>
-       </property>
-       <item row="1" column="2">
-        <widget class="QLabel" name="labelImagerySource">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Imagery source:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="labelAOILayer">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Area:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QgsMapLayerComboBox" name="polygonCombo">
-         <property name="allowEmptyLayer">
-          <bool>false</bool>
-         </property>
-         <property name="showCrs">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="labelProcessingName">
          <property name="font">
@@ -311,27 +274,6 @@
          </property>
          <property name="text">
           <string>Processing name:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QComboBox" name="workflowDefinitionCombo">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>160</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
          </property>
         </widget>
        </item>
@@ -377,82 +319,117 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
-        <layout class="QHBoxLayout" name="horizontalLayout_4">
-         <item>
-          <widget class="QgsMapLayerComboBox" name="rasterCombo">
+       <item row="0" column="3" colspan="2">
+        <widget class="QComboBox" name="workflowDefinitionCombo">
          <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
-             <width>0</width>
+           <width>160</width>
            <height>0</height>
           </size>
          </property>
-           <property name="showCrs">
-            <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_5">
-           <item>
-            <widget class="QPushButton" name="selectTif">
-             <property name="enabled">
-              <bool>true</bool>
-         </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-         </property>
-             <property name="maximumSize">
-              <size>
-               <width>25</width>
-               <height>31</height>
-              </size>
-             </property>
          <property name="font">
           <font>
-               <pointsize>8</pointsize>
+           <pointsize>12</pointsize>
           </font>
-         </property>
-             <property name="focusPolicy">
-              <enum>Qt::NoFocus</enum>
-             </property>
-         <property name="text">
-              <string>...</string>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>16</width>
-               <height>16</height>
-              </size>
          </property>
         </widget>
        </item>
-          </layout>
-         </item>
-        </layout>
+       <item row="1" column="0">
+        <widget class="QLabel" name="labelAOILayer">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Area:</string>
+         </property>
+        </widget>
        </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="layoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>3</x>
-        <y>87</y>
-        <width>571</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
+       <item row="1" column="1">
+        <widget class="QgsMapLayerComboBox" name="polygonCombo">
+         <property name="allowEmptyLayer" stdset="0">
+          <bool>false</bool>
+         </property>
+         <property name="showCrs" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QLabel" name="labelImagerySource">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Imagery source:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="QgsMapLayerComboBox" name="rasterCombo">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="showCrs" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="4">
+        <widget class="QPushButton" name="selectTif">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>25</width>
+           <height>31</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>8</pointsize>
+          </font>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
         <widget class="QCheckBox" name="useImageExtentAsAOI">
          <property name="enabled">
           <bool>false</bool>
@@ -467,7 +444,7 @@
          </property>
         </widget>
        </item>
-       <item>
+       <item row="2" column="2" colspan="2">
         <widget class="QCheckBox" name="updateCache">
          <property name="font">
           <font>
@@ -1138,10 +1115,10 @@
         </item>
         <item row="4" column="1">
          <widget class="QgsMapLayerComboBox" name="maxarAOICombo">
-          <property name="allowEmptyLayer">
+          <property name="allowEmptyLayer" stdset="0">
            <bool>false</bool>
           </property>
-          <property name="showCrs">
+          <property name="showCrs" stdset="0">
            <bool>true</bool>
           </property>
          </widget>
