--- a/login_dialog.ui
+++ b/login_dialog.ui
@@ -32,7 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Geoalert - Log In</string>
+   <string>Mapflow - Log In</string>
   </property>
   <property name="windowIcon">
    <iconset>
